# adaglm

./: README.md  pyproject.toml
src/adaglm/: __init__.py
