[project]
name = "adaglm"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Nan Xiao", email = "me@nanx.me" }
]
dependencies = [
    "numba>=0.60.0",
    "numpy>=2.0.0",
    "skglm>=0.3.1",
]
readme = "README.md"
requires-python = ">= 3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.8.2",
    "pytest>=8.3.4",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/adaglm"]
